--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "NODE_ENV=production node ./scripts/build.js"
+    "build": "NODE_ENV=production node ./scripts/build.js",
+    "deploy": "netlify deploy"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "replace-in-file": "^3.0.0-beta.2",
+    "resolve-url-loader": "2.1.0",
     "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.18.2",
